--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "@polymer/iron-selector": "^3.0.0-pre.15",
     "@polymer/paper-icon-button": "^3.0.0-pre.15",
     "@polymer/polymer": "^3.0.0",
-    "@webcomponents/webcomponentsjs": "^2.0.0"
+    "@webcomponents/webcomponentsjs": "^2.0.0",
+    "blox-keypair": "^1.0.0"
   },
   "devDependencies": {
     "polymer-cli": "^1.7.1",
