--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@polymer/paper-icon-button": "^3.0.0-pre.15",
     "@polymer/polymer": "^3.0.0",
     "@webcomponents/webcomponentsjs": "^2.0.0",
+    "blox-account": "^1.0.0",
+    "blox-connect": "^1.0.3",
     "blox-keypair": "^1.0.0",
     "blox-paper": "^1.0.3"
   },
